# bili_player

./: .env  .gitignore  Cargo.toml  build.rs  cliff.toml  deny.toml  musics_data.db
examples/: get_music_info.rs
migrations/: 20260104130302_create_music_table.up.sql
proto/: player.proto
src/: client.rs  errors.rs  lib.rs  logger.rs  main.rs  server.rs  utils.rs
src/fetch/: network.rs  verify.rs
src/pb/: mod.rs  player.rs
src/player/: audio_player.rs  command.rs  mod.rs  play_list.rs  state.rs
tests/: first_test.rs
