[package]
name = "bili_player"
version = "0.1.0"
edition = "2024"
description = "A simple Bilibili video player"
authors = ["Qiqianily <Joedian@163.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite","chrono"] }
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = {version = "0.1.41",features = ["async-await"]}
tracing-subscriber = {version = "0.3.20",features = ["env-filter","chrono"]}
